<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Layout to displaying header at the top and for populating movies -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_filter_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingHorizontal="@dimen/padding_medium"
            android:orientation="horizontal"
            android:elevation="@dimen/default_elevation">

            <TextView
                android:id="@+id/tv_selected_filter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/text_popular_movies_label"
                android:fontFamily="@font/open_sans"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btn_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/text_button_filter"
                android:fontFamily="@font/open_sans"
                android:drawableRight="@drawable/ic_sort"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll_filter_settings"/>
    </RelativeLayout>

    <!-- Layout to show message when there is no internet connection -->
    <RelativeLayout
        android:id="@+id/rl_internet_failure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_no_internet_connection" />

        <TextView
            android:id="@+id/txt_no_internet"
            android:layout_below="@+id/iv_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_no_internet"
            android:fontFamily="@font/open_sans"
            android:textSize="@dimen/text_size_average"/>

        <Button
            android:id="@+id/btn_retry"
            android:layout_below="@id/txt_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/margin_large"
            android:text="@string/text_action_retry"
            android:fontFamily="@font/open_sans"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

    <!-- Bottom sheet for filtering movie actions -->
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="@dimen/default_elevation"
            android:padding="@dimen/padding_medium"
            android:background="@color/colorPrimaryLight">


                <Button
                    android:id="@+id/btn_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rect_background_selected"
                    android:text="@string/text_action_popular"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/text_size_medium"/>

                <Button
                    android:id="@+id/btn_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rect_background"
                    android:layout_marginTop="@dimen/margin_extra_extra_medium_small"
                    android:text="@string/text_action_top_rated"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/text_size_medium"/>

                <Button
                    android:id="@+id/btn_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_rect_background"
                    android:layout_marginTop="@dimen/margin_extra_extra_medium_small"
                    android:text="Favorites"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginBottom="@dimen/margin_extra_small"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>